--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using SEM.Areas.Identity
-@using SEM.Areas.Identity.Pages
+@using MCC.Areas.Identity
+@using MCC.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using SEM.Areas.Identity.Data
+@using MCC.Areas.Identity.Data
