--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using SEM.Areas.Identity.Data
+@using MCC.Areas.Identity.Data
 
 @inject SignInManager<SEMUser> SignInManager
 @inject UserManager<SEMUser> UserManager
